--- a/zuul/zuul-service/src/main/resources/bootstrap.yml
+++ b/zuul/zuul-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   application:
-    name: novel-service
+    name: zuul-service
   profiles:
     active: @profiles.active@
   cloud:
