--- a/business-bom/pom.xml
+++ b/business-bom/pom.xml
@@ -3,13 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.alice</groupId>
-    <artifactId>bom</artifactId>
-    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>bom ${project.version}</name>
+    <groupId>com.alice</groupId>
+    <artifactId>business-bom</artifactId>
+    <name>business-bom ${project.version}</name>
+    <packaging>pom</packaging>
 
     <!--统一管理jar包版本-->
     <properties>
