--- a/business-feign/business-feign-blog/business-feign-blog-api/pom.xml
+++ b/business-feign/business-feign-blog/business-feign-blog-api/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.alice</groupId>
             <artifactId>business-support-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
