--- a/business-feign/business-feign-novel/pom.xml
+++ b/business-feign/business-feign-novel/pom.xml
@@ -13,11 +13,17 @@
     <name>business-feign-novel ${project.version}</name>
     <packaging>jar</packaging>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alice</groupId>
             <artifactId>business-support-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
