--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <module>business-orm</module>
         <module>business-service</module>
         <module>business-support</module>
-        <module>business-feign/business-feign-blog/business-feign-blog-core</module>
     </modules>
 
     <dependencyManagement>
@@ -59,7 +58,7 @@
 
     <build>
         <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
-        <finalName>${artifactId}</finalName>
+        <finalName>${artifactId}-${version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
