--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,25 @@
     </repositories>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <configuration>
+                        <executable>true</executable>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
         <finalName>${artifactId}-${version}</finalName>
         <plugins>
