--- a/business-service/business-service-demo/pom.xml
+++ b/business-service/business-service-demo/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>javatuples</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
